--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,20 @@
 ---
 
+cert_manager_namespace: cert-manager
 cert_manager_repository:
   name: jetstack
   url: https://charts.jetstack.io
   version: v1.8.0
+
+cloudflare_kubernetes_secret: cloudflare-api-key-secret
+cloudflare_email: user@example.com
+cloudflare_key: Your-Cloudflare-APIKey
+
+letsencrypt:
+  email: '{{ cloudflare_email }}'
+  prod:
+    cluster_issuer: letsencrypt-prod
+    server: https://acme-v02.api.letsencrypt.org/directory
+  staging:
+    cluster_issuer: letsencrypt-staging
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
