--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,16 +1,15 @@
 ---
 
 cert_manager_namespace: cert-manager
-cert_manager_repository:
-  name: jetstack
-  url: https://charts.jetstack.io
-  version: v1.8.0
+cert_manager_repo_name: jetstack
+cert_manager_repo_url: https://charts.jetstack.io
+cert_manager_repo_version: v1.8.0
 
 cloudflare_email: user@example.com
 cloudflare_key: Your-Cloudflare-APIKey
 
+letsencrypt_email: user@example.com
 letsencrypt:
-  email: '{{ cloudflare_email }}'
   prod:
     cluster_issuer: letsencrypt-prod
     server: https://acme-v02.api.letsencrypt.org/directory
