--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@ cert_manager_repo_url: https://charts.jetstack.io
 cert_manager_repo_version: v1.8.0
 
 cloudflare_email: user@example.com
-cloudflare_key: Your-Cloudflare-APIKey
+cloudflare_token: Your-Cloudflare-Token
 
 letsencrypt_email: user@example.com
 letsencrypt:
